# MMM-LCD-Backlight

./: .gitignore  MMM-LCD-Backlight.js  MMM-LCD-Backlights.js  README.md  node_helper.js  package.json
Pi Pico SDK Code/: CMakeLists.txt  backlighting.cpp  jsmn.h  jsmn_traversal.hpp  rstp.c  rstp.h
test/: backlight.js
